Fixing logo and menu items' width so they won't break the menu line

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -26,16 +26,16 @@ src: url( "../ReenieBeanie.ttf");
 
 .stickyLogo{
 	margin:0 auto;
-	background:#FEFEBA; 
-	width:260px; 
+	background:#FEFEBA;
+	width:240px;
 	height:100px;
 	padding:6px 6px 26px 6px;
     float:left;
-	/* Firefox */  
-	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1); 
-	/* Safari+Chrome */  
-	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);  
-	/* Opera */  
+	/* Firefox */
+	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
+	/* Safari+Chrome */
+	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+	/* Opera */
 	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 }
 
@@ -65,24 +65,24 @@ src: url( "../ReenieBeanie.ttf");
 	font-family: neucha, serif;
 	font-size:200%;
 	color:black;
-	list-style-type:none; 
+	list-style-type:none;
 	text-align:center;
-	float:left; 
+	float:left;
 	min-height:40px;
-	/* Firefox */  
-	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);  
-	/* Safari+Chrome */  
-	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);  
-	/* Opera */  
+	/* Firefox */
+	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
+	/* Safari+Chrome */
+	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+	/* Opera */
 	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 }
 
 .menuItem{
-	background:#cfc; 
+	background:#cfc;
 	padding:36px 22px 16px 22px;
 	margin:0px 0 0 20px;
     float:left;
-    width:130px;
+    width:118px;
 }
 
 .mainView{
@@ -90,24 +90,24 @@ src: url( "../ReenieBeanie.ttf");
 }
 
 .newItem{
-	background:#FF8040; 
+	background:#FF8040;
 	width:200px;
 	height:100px;
 	padding-top:30px;
 }
 
 .menuItem:hover,.menuItem:focus, .newItem:hover,.newItem:focus {
-	   -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);  
-	   -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);  
-	   box-shadow:10px 10px 7px rgba(0,0,0,.7);  
-	   -webkit-transform: scale(1.0);  
-	   -moz-transform: scale(1.0);  
-	   -o-transform: scale(1.0);  
-	   position:relative;  
+	   -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
+	   -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
+	   box-shadow:10px 10px 7px rgba(0,0,0,.7);
+	   -webkit-transform: scale(1.0);
+	   -moz-transform: scale(1.0);
+	   -o-transform: scale(1.0);
+	   position:relative;
 	   z-index:5;
-    -moz-transition:-moz-transform .15s linear;  
-    -o-transition:-o-transform .15s linear;  
-    -webkit-transition:-webkit-transform .15s linear;  
+    -moz-transition:-moz-transform .15s linear;
+    -o-transition:-o-transform .15s linear;
+    -webkit-transition:-webkit-transform .15s linear;
 }
 
 #content{
@@ -123,8 +123,8 @@ src: url( "../ReenieBeanie.ttf");
 }
 
 .iterationLane{
-    border:3px #F0F0F0 dashed; 
-    padding:0px; 
+    border:3px #F0F0F0 dashed;
+    padding:0px;
     width:200px;
 }
 
@@ -142,7 +142,7 @@ src: url( "../ReenieBeanie.ttf");
 	height:100%;
 	width:150px;
 	font-size:80%;
-    background:#FEFEBB; 
+    background:#FEFEBB;
 	padding:10px;
     -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
 	-webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
@@ -166,10 +166,10 @@ src: url( "../ReenieBeanie.ttf");
 }
 
 /* Basic Style for the stickies*/
-.storySticky{ 
-	background:#FEFEBB; 
+.storySticky{
+	background:#FEFEBB;
 	width:250px;
-	height:320px; 
+	height:320px;
 	padding:10px;
 }
 
@@ -191,11 +191,11 @@ src: url( "../ReenieBeanie.ttf");
 
 /* Sticky Shadow property*/
 .storySticky{
-	/* Firefox */  
+	/* Firefox */
 	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
-	/* Safari+Chrome */  
+	/* Safari+Chrome */
 	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-	/* Opera */  
+	/* Opera */
 	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 }
 
